Fix spacing and font size for phones

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -212,7 +212,7 @@ nav a:hover {
     }
  }
 
- @media only screen and (max-height: 900px) {
+ @media only screen and (max-height: 1200px) {
     h1 {
         font-size: 2.8em;
     }
@@ -238,12 +238,43 @@ nav a:hover {
         font-size: 2.0em;
     }
 
+    .arrow {
+        font-size: 5.0em !important;
+    }
+    
+}
+ @media only screen and (max-height: 900px) {
+    h1 {
+        font-size: 2.5em;
+    }
+    
+    h2 {
+        font-size: 2.2em;
+    }
+    
+    h3 {
+        font-size: 1.8em;
+    }
+    
+    
+    nav {
+        font-size: 2.5em;
+    }
+
+    .nav-button {
+        font-size: 2.0em;
+    }
+    
+    p, li, footer{
+        font-size: 2.0em;
+    }
+
     header div h2 {
         display: none;
     }
 
     .arrow {
-        font-size: 5.0em !important;
+        font-size: 4.0em !important;
     }
     
 }
